# asl-hoyland

./: Makefile  installer.nsi  package-lock.json  package.json  tsconfig.json  vite.config.ts
graveyard/: App.css  App.tsx  ErrorList.tsx  types.ts
graveyard/tabs/: DebugSettings.tsx  DefaultPrograms.tsx  ProgramEditor.tsx  YourPrograms.tsx
nsis/: installer.nsi
public/: defaultPrograms.json  xxx.txt
src/: App.css  App.tsx  AppContext.tsx  AppDatabase.ts  ClearDatabase.tsx  ErrorBar.tsx  ErrorBoundary.tsx  ErrorList.tsx  FrequencyGenerator.ts  PortConnector.tsx  ProgramEditor.tsx  StatusIndicator.tsx  main.tsx  serialport.d.ts  types.ts
src-tauri/: Cargo.toml  custom.nsi  tauri.conf.json
src-tauri/src/: main.rs
src/CustomPrograms/: Index.tsx
src/DefaultPrograms/: Index.tsx
src/ProgramEditor/: index.tsx
src/assets/: App.css  ErrorBar.css
src/util/: AppDatabase.ts  FrequencyGenerator.ts  HoylandController.ts  ProgramRunner.ts
