[package]
name = "hoyland"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.4.0", features = [] }

[dependencies]
tauri = { version = "1.4.0", features = ["api-all"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serialport = "4.0.0"
lazy_static = "1.4.0"

[features]
custom-protocol = ["tauri/custom-protocol"]

[build]
incremental = false
