[package]
name = "hoyland"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.4.0", features = [] }

[dependencies]
tauri = { version = "1.4.0", features = ["api-all"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serialport = "4.0.0"
lazy_static = "1.4.0"
log = "0.4"
env_logger = "0.10.0"

[features]
custom-protocol = ["tauri/custom-protocol"]

[build]
incremental = false

[target.x86_64-pc-windows-gnu]
linker = "x86_64-w64-mingw32-gcc"
